# extractObjects

./: CMakeLists.txt  Makefile  manifest.xml
cfg/: extractObjects.cfg  extractObjects.cfgc
cfg/cpp/extractObjects/: extractObjectsConfig.h
src/: estimatePoseICP.cpp  estimatePoseVfh.cpp  estimateVfhPose.cpp  extractMultipleROI.cpp  extractObjectClusters.cpp  extractROI.cpp  selectHSVLimits.cpp  setTraingData.cpp
src/extractObjects/cfg/: extractObjectsConfig.py
